--- a/dashboard/templates/select_server.html
+++ b/dashboard/templates/select_server.html
@@ -81,7 +81,7 @@
         <div class="row g-4">
             {% for guild in guilds %}
             <div class="col-md-4">
-                <a href="{{ url_for('dashboard.guild_dashboard', guild_id=guild['id']) }}" class="text-decoration-none">
+                <a href="{{ url_for('dashboard', guild_id=guild['id']) }}" class="text-decoration-none">
                     <div class="server-card p-3">
                         <div class="d-flex align-items-center">
                             {% if guild.get('icon') %}
