--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -119,7 +119,7 @@
                 <img src="{{ guild_icon_url }}" alt="{{ guild_name }}" class="rounded-circle me-3" style="width: 64px; height: 64px;">
                 <h1 class="h3 mb-0">{{ guild_name }}</h1>
             </div>
-            <a href="{{ url_for('dashboard.select_server') }}" class="btn btn-outline-primary">
+            <a href="{{ url_for('select_server') }}" class="btn btn-outline-primary">
                 <i class="bi bi-arrow-left"></i> Change Server
             </a>
         </div>
